Added new pages and links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <Title>W3A Assignment</Title>
     </head>
     <body>
+        <a href="reviews.html">Reviews</a>
+        <a href="contact.html">Contact</a>
+        <hr>
         <iframe 
         width="560" 
         height="315" 
