Added Layout Tags

--- a/reviews.html
+++ b/reviews.html
@@ -4,19 +4,50 @@
         <title>Reviews</title>
     </head>
     <body>
-        <p>
-            Some reviews
-        </p>
-        <br>
-        <p>
-            More reviews
-        </p>
-        <br>
-        <p>
-            For more reviews visit our Yelp page 
-            <a href="https://www.yelp.ca/biz/red-swan-pizza-edmonton-5">here</a>.
-        </p>
+        <nav id="header-nav">
+            <span id="logo">
+                <img src="Media/Okotoks Pizza.png" height="30">
+            </span>
+            <button onclick="location.href='index.html'">Home</button>
+            <button onclick="location.href='reviews.html'">Reviews</button>
+            <button onclick="location.href='contact.html'">Contact</button>
+        </nav>
         <hr>
-        <a href="index.html">Home</a>
+        <article>
+            <h2><b>Our reviews!</b></h2>
+            <div id="reviews">
+                <ul>
+                    <li>Some reviews</li>
+                    <li>Some more reviews</li>
+                    <li>And more reviews</li>
+                    <li>This is a review</li>
+                    <li>This is probably one too</li>
+                </ul>
+            </div>
+            <br>
+            <footer id="article-footer">
+                <p>
+                    <b>
+                        For more reviews visit our Yelp page 
+                        <a href="https://www.yelp.ca/biz/red-swan-pizza-edmonton-5">here</a>.
+                    </b>
+                </p>
+            </footer>
+        </article>
+        <br>
+        <hr>
+        <footer>
+            <span id="logo-lower">
+                <img src="Media/Okotoks Pizza.png" height="20">
+            </span>
+            <span id="footer-nav">
+                <a href="https://ca.indeed.com/">Jobs</a>
+                <a href="about.html">About</a>
+                <a href="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80">Cookies</a>
+            </span>
+            <div class="copyright">
+                <p>All rights reserved etc etc</p>
+            </div>
+        </footer>
     </body>
 </html>
