--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,33 @@
         <title>Contact</title>
     </head>
     <body>
-        <a href="mailto:info@okotokspizza.ca">Email us!</a>
-        <br>
-        <a href="tel:(403)555-5555">Call us!</a>
+        <nav id="header-nav">
+            <span id="logo">
+                <img src="Media/Okotoks Pizza.png" height="30">
+            </span>
+            <button onclick="location.href='index.html'">Home</button>
+            <button onclick="location.href='reviews.html'">Reviews</button>
+            <button onclick="location.href='contact.html'">Contact</button>
+        </nav>
         <hr>
-        <a href=index.html>Home</a>
+        <div id="contact-info">
+            <a href="mailto:info@okotokspizza.ca">Email us!</a>
+            <br>
+            <a href="tel:(403)555-5555">Call us!</a>
+        </div>
+        <hr>
+        <footer>
+            <span id="logo-lower">
+                <img src="Media/Okotoks Pizza.png" height="20">
+            </span>
+            <span id="footer-nav">
+                <a href="https://ca.indeed.com/">Jobs</a>
+                <a href="about.html">About</a>
+                <a href="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80">Cookies</a>
+            </span>
+            <div class="copyright">
+                <p>All rights reserved etc etc</p>
+            </div>
+        </footer>
     </body>
 </html>
