--- a/index.html
+++ b/index.html
@@ -4,29 +4,65 @@
         <Title>W3A Assignment</Title>
     </head>
     <body>
-        <a href="reviews.html">Reviews</a>
-        <a href="contact.html">Contact</a>
+        <nav id="header-nav">
+            <span id="logo">
+                <img src="Media/Okotoks Pizza.png" height="30">
+            </span>
+            <button onclick="location.href='index.html'">Home</button>
+            <button onclick="location.href='reviews.html'">Reviews</button>
+            <button onclick="location.href='contact.html'">Contact</button>
+        </nav>
         <hr>
-        <iframe 
-        width="560" 
-        height="315" 
-        src="https://www.youtube.com/embed/xcbDX0QB4BM" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
-        </iframe>
+        <main>
+            <article id="aboutPizza">
+                <h2><b>The Best Pizza Place</b></h2>
+                <section id="main description">
+                    <p>This is the pizza place being described. Its pretty good 
+                        <a href="https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80">pizza</a>
+                        . Not suprisingly, we also serve <a href="https://images.unsplash.com/photo-1612528443702-f6741f70a049?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1059&q=80">beverages</a>!
+                    </p>
+                    <footer id="article-footer">
+                        <p>The best food around!</p>
+                    </footer>
+                </section>
+            </article>
+            <section id="imgAndMedia">
+                <header id="index-section-header">
+                    <h4>Check out our food below!</h4>
+                </header>
+                <iframe 
+                width="560" 
+                height="315" 
+                src="https://www.youtube.com/embed/xcbDX0QB4BM" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
+                </iframe>
+                <br>
+                <img 
+                src="https://images.unsplash.com/photo-1489564239502-7a532064e1c2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" 
+                alt="Pizza Oven"
+                width="560"/>
+                <br>
+                <img
+                src="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                alt="Pizza photo"
+                width="560"/>
+            </section>
+        </main>
         <br>
-        
-        <img 
-        src="https://images.unsplash.com/photo-1489564239502-7a532064e1c2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" 
-        alt="Pizza Oven"
-        width="560"/>
-        <br>
-        
-        <img
-        src="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-        alt="Pizza photo"
-        width="560"/>
-
+        <footer>
+            <span id="logo-lower">
+                <img src="Media/Okotoks Pizza.png" height="20">
+            </span>
+            <span id="footer-nav">
+                <a href="https://ca.indeed.com/">Jobs</a>
+                <a href="about.html">About</a>
+                <a href="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80">Cookies</a>
+            </span>
+            <div class="copyright">
+                <p>All rights reserved etc etc</p>
+            </div>
+        </footer>
     </body>
 </html>
