--- a/about.html
+++ b/about.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The story about Okotoks Pizza. A family run business in Okotoks, Alberta." />
+    <meta name="author" content="Matt Cleveland" />
+    <meta name="keywords" content="about, story, okotoks pizza" />
+    <meta property="og:URL" content="http://www.okotokspizza.com/about.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Okotoks Pizza - About" />
+    <meta property="og:description" content="The story about Okotoks Pizza. A family run business in Okotoks, Alberta." />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@okotokspizza" />
+    <meta name="twitter:title" content="Okotoks Pizza - About" />
+    <meta name="twitter:description" content="The story about Okotoks Pizza. A family run business in Okotoks, Alberta." />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" />
+    <link rel="stylesheet" type="text/css" href="headerFooterStyle.css">
 </head>
 <body>
-    <nav id="header-nav">
-        <span id="logo">
-            <img src="Media/Okotoks Pizza.png" height="30">
-        </span>
-        <button onclick="location.href='index.html'">Home</button>
-        <button onclick="location.href='reviews.html'">Reviews</button>
-        <button onclick="location.href='contact.html'">Contact</button>
-    </nav>
-    <hr>
+    <header class="main-header">
+        <div class="header-container">
+            <img src="Media/Okotoks Pizza.png" height="40" alt="Okotoks Pizza Logo" />
+            <h1>Okotoks Pizza</h1>
+            <h2>(777) 777-7777</h2>
+        </div>
+        <nav id="header-nav">
+            <button class="nav-button" onclick="location.href='index.html'">Home</button>
+            <button class="nav-button" onclick="location.href='reviews.html'">Reviews</button>
+            <button class="nav-button" onclick="location.href='contact.html'">Contact</button>
+        </nav>
+    </header>
     <article>
         <h3>All about us!</h3>
         <p>We are a pizza place</p>
     </article>
-    <hr/>
-    <footer>
+    <br>
+    <footer class="main-footer">
         <span id="logo-lower">
-            <img src="Media/Okotoks Pizza.png" height="20">
+            <img src="Media/Okotoks Pizza.png" height="30" alt="Okotoks Pizza Logo" />
         </span>
         <span id="footer-nav">
             <a href="https://ca.indeed.com/">Jobs</a>
