--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <Title>W3A Assignment</Title>
+        <Title>Home page</Title>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Okotoks Pizza, a family run restaurant for the authetic and classic italian flavor." />
+        <meta name="author" content="Matt Cleveland" />
+        <meta name="keywords" content="Home, okotoks pizza, restautant, italian, classic, authentic, pizza, calzones, pasta, drinks, wine, italy" />
+        <meta property="og:URL" content="http://www.okotokspizza.com/index.html" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Okotoks Pizza - Home" />
+        <meta property="og:description" content="Okotoks Pizza, a family run restaurant for the authetic and classic italian flavor." />
+        <meta property="og:image" content="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" />
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@okotokspizza" />
+        <meta name="twitter:title" content="Okotoks Pizza - Home" />
+        <meta name="twitter:description" content="Okotoks Pizza, a family run restaurant for the authetic and classic italian flavor." />
+        <meta name="twitter:image" content="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" />
+        <link rel="stylesheet" type="text/css" href="headerFooterStyle.css">
     </head>
     <body>
-        <nav id="header-nav">
-            <span id="logo">
-                <img src="Media/Okotoks Pizza.png" height="30">
-            </span>
-            <button onclick="location.href='index.html'">Home</button>
-            <button onclick="location.href='reviews.html'">Reviews</button>
-            <button onclick="location.href='contact.html'">Contact</button>
-        </nav>
-        <hr>
+        <header class="main-header">
+            <div class="header-container">
+                <img src="Media/Okotoks Pizza.png" height="40" alt="Okotoks Pizza Logo" />
+                <h1>Okotoks Pizza</h1>
+                <h2>(777) 777-7777</h2>
+            </div>
+            <nav id="header-nav">
+                <button class="nav-button" onclick="location.href='index.html'">Home</button>
+                <button class="nav-button" onclick="location.href='reviews.html'">Reviews</button>
+                <button class="nav-button" onclick="location.href='contact.html'">Contact</button>
+            </nav>
+        </header>
         <main>
             <article id="aboutPizza">
                 <h2><b>The Best Pizza Place</b></h2>
@@ -30,30 +50,31 @@
                 <header id="index-section-header">
                     <h4>Check out our food below!</h4>
                 </header>
-                <iframe 
+                <iframe
                 width="560" 
                 height="315" 
                 src="https://www.youtube.com/embed/xcbDX0QB4BM" 
                 title="YouTube video player" 
                 frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                alt="Video about pizza">
                 </iframe>
                 <br>
                 <img 
                 src="https://images.unsplash.com/photo-1489564239502-7a532064e1c2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" 
-                alt="Pizza Oven"
-                width="560"/>
+                alt="Pizza Oven image"
+                width="560" />
                 <br>
                 <img
                 src="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
                 alt="Pizza photo"
-                width="560"/>
+                width="560" />
             </section>
         </main>
         <br>
-        <footer>
+        <footer class="main-footer">
             <span id="logo-lower">
-                <img src="Media/Okotoks Pizza.png" height="20">
+                <img src="Media/Okotoks Pizza.png" height="30" alt="Okotoks Pizza Logo" />
             </span>
             <span id="footer-nav">
                 <a href="https://ca.indeed.com/">Jobs</a>
