Added new CSS selectors

--- a/reviews.html
+++ b/reviews.html
@@ -18,12 +18,12 @@
         <meta name="twitter:title" content="Okotoks Pizza - Reveiws" />
         <meta name="twitter:description" content="All reviews for Okotoks Pizza." />
         <meta name="twitter:image" content="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" />
-        <link rel="stylesheet" type="text/css" href="headerFooterStyle.css">
+        <link rel="stylesheet" type="text/css" href="CSS/site.css">
     </head>
     <body>
         <header class="main-header">
             <div class="header-container">
-                <img src="Media/Okotoks Pizza.png" height="40" alt="Okotoks Pizza Logo" />
+                <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
                 <h1>Okotoks Pizza</h1>
                 <h2>(777) 777-7777</h2>
             </div>
@@ -33,31 +33,33 @@
                 <button class="nav-button" onclick="location.href='contact.html'">Contact</button>
             </nav>
         </header>
-        <article>
-            <h2><b>Our reviews!</b></h2>
-            <div id="reviews">
-                <ul>
-                    <li>Some reviews</li>
-                    <li>Some more reviews</li>
-                    <li>And more reviews</li>
-                    <li>This is a review</li>
-                    <li>This is probably one too</li>
-                </ul>
-            </div>
-            <br>
-            <footer id="article-footer">
-                <p>
-                    <b>
-                        For more reviews visit our Yelp page 
-                        <a href="https://www.yelp.ca/biz/red-swan-pizza-edmonton-5">here</a>.
-                    </b>
-                </p>
-            </footer>
-        </article>
+        <main>
+            <article>
+                <h2><b>Our reviews!</b></h2>
+                <div id="reviews">
+                    <ul>
+                        <li>Some reviews</li>
+                        <li>Some more reviews</li>
+                        <li>And more reviews</li>
+                        <li>This is a review</li>
+                        <li>This is probably one too</li>
+                    </ul>
+                </div>
+                <br>
+                <footer id="article-footer">
+                    <p>
+                        <b>
+                            For more reviews visit our Yelp page 
+                            <a href="https://www.yelp.ca/biz/red-swan-pizza-edmonton-5">here</a>.
+                        </b>
+                    </p>
+                </footer>
+            </article>
+        </main>
         <br>
         <footer class="main-footer">
             <span id="logo-lower">
-                <img src="Media/Okotoks Pizza.png" height="30" alt="Okotoks Pizza Logo" />
+                <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
             </span>
             <span id="footer-nav">
                 <a href="https://ca.indeed.com/">Jobs</a>
@@ -65,7 +67,7 @@
                 <a href="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80">Cookies</a>
             </span>
             <div class="copyright">
-                <p>All rights reserved etc etc</p>
+                <p>© All rights reserved</p>
             </div>
         </footer>
     </body>
