--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
     <meta name="twitter:title" content="Okotoks Pizza - About" />
     <meta name="twitter:description" content="The story about Okotoks Pizza. A family run business in Okotoks, Alberta." />
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" />
-    <link rel="stylesheet" type="text/css" href="headerFooterStyle.css">
+    <link rel="stylesheet" type="text/css" href="CSS/site.css">
 </head>
 <body>
     <header class="main-header">
         <div class="header-container">
-            <img src="Media/Okotoks Pizza.png" height="40" alt="Okotoks Pizza Logo" />
+            <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
             <h1>Okotoks Pizza</h1>
             <h2>(777) 777-7777</h2>
         </div>
@@ -33,14 +33,16 @@
             <button class="nav-button" onclick="location.href='contact.html'">Contact</button>
         </nav>
     </header>
-    <article>
-        <h3>All about us!</h3>
-        <p>We are a pizza place</p>
-    </article>
+    <main>
+        <article>
+            <h3>All about us!</h3>
+            <p>We are a pizza place</p>
+        </article>
+    </main>
     <br>
     <footer class="main-footer">
         <span id="logo-lower">
-            <img src="Media/Okotoks Pizza.png" height="30" alt="Okotoks Pizza Logo" />
+            <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
         </span>
         <span id="footer-nav">
             <a href="https://ca.indeed.com/">Jobs</a>
@@ -48,7 +50,7 @@
             <a href="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80">Cookies</a>
         </span>
         <div class="copyright">
-            <p>All rights reserved etc etc</p>
+            <p>© All rights reserved</p>
         </div>
     </footer>
 </body>
