--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <meta name="twitter:title" content="Okotoks Pizza - Home" />
         <meta name="twitter:description" content="Okotoks Pizza, a family run restaurant for the authetic and classic italian flavor." />
         <meta name="twitter:image" content="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" />
-        <link rel="stylesheet" type="text/css" href="headerFooterStyle.css">
+        <link rel="stylesheet" type="text/css" href="CSS/site.css">
     </head>
     <body>
         <header class="main-header">
             <div class="header-container">
-                <img src="Media/Okotoks Pizza.png" height="40" alt="Okotoks Pizza Logo" />
+                <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
                 <h1>Okotoks Pizza</h1>
                 <h2>(777) 777-7777</h2>
             </div>
@@ -35,8 +35,8 @@
         </header>
         <main>
             <article id="aboutPizza">
-                <h2><b>The Best Pizza Place</b></h2>
-                <section id="main description">
+                <h2>The Best Pizza Place</h2>
+                <section id="main-description">
                     <p>This is the pizza place being described. Its pretty good 
                         <a href="https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80">pizza</a>
                         . Not suprisingly, we also serve <a href="https://images.unsplash.com/photo-1612528443702-f6741f70a049?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1059&q=80">beverages</a>!
@@ -62,19 +62,17 @@
                 <br>
                 <img 
                 src="https://images.unsplash.com/photo-1489564239502-7a532064e1c2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" 
-                alt="Pizza Oven image"
-                width="560" />
+                alt="Pizza Oven image"/>
                 <br>
                 <img
                 src="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                alt="Pizza photo"
-                width="560" />
+                alt="Pizza photo"/>
             </section>
         </main>
         <br>
         <footer class="main-footer">
             <span id="logo-lower">
-                <img src="Media/Okotoks Pizza.png" height="30" alt="Okotoks Pizza Logo" />
+                <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
             </span>
             <span id="footer-nav">
                 <a href="https://ca.indeed.com/">Jobs</a>
@@ -82,7 +80,7 @@
                 <a href="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80">Cookies</a>
             </span>
             <div class="copyright">
-                <p>All rights reserved etc etc</p>
+                <p>© All rights reserved</p>
             </div>
         </footer>
     </body>
