Started grid based layout

--- a/index.html
+++ b/index.html
@@ -69,16 +69,19 @@
                 alt="Pizza photo"/>
             </section>
         </main>
-        <br>
         <footer class="main-footer">
             <span id="logo-lower">
                 <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
             </span>
-            <span id="footer-nav">
+            <div id="jobs">
                 <a href="https://ca.indeed.com/">Jobs</a>
+            </div>
+            <div id="about">
                 <a href="about.html">About</a>
+            </div>
+            <div id="cookies">
                 <a href="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80">Cookies</a>
-            </span>
+            </div>
             <div class="copyright">
                 <p>© All rights reserved</p>
             </div>
