Added fancy transition effects

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <body>
         <header class="main-header">
             <div class="header-container">
-                <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
+                <a id="img-logo" href="index.html"><img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo"></a>
                 <h1>Okotoks Pizza</h1>
                 <h2>(777) 777-7777</h2>
             </div>
