--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <header class="main-header">
             <div class="header-container">
-                <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
+                <a id="img-logo" href="index.html"><img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo"></a>
                 <h1>Okotoks Pizza</h1>
                 <h2>(777) 777-7777</h2>
             </div>
@@ -60,11 +60,11 @@
                 alt="Video about pizza">
                 </iframe>
                 <br>
-                <img 
+                <img id="main-img-one"
                 src="https://images.unsplash.com/photo-1489564239502-7a532064e1c2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" 
                 alt="Pizza Oven image"/>
                 <br>
-                <img
+                <img id="main-img-two"
                 src="https://images.unsplash.com/photo-1581873372796-635b67ca2008?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
                 alt="Pizza photo"/>
             </section>
