--- a/about.html
+++ b/about.html
@@ -21,17 +21,18 @@
     <link rel="stylesheet" type="text/css" href="CSS/site.css">
 </head>
 <body>
-    <header class="main-header">
-        <div class="header-container">
-            <a id="img-logo" href="index.html"><img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo"></a>
-            <h1>Okotoks Pizza</h1>
-            <h2>(777) 777-7777</h2>
-        </div>
+    <header id="main-header">
+        <a id="img-logo" href="index.html"><img id="site-logo" src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo"></a>
+        <h1>Okotoks Pizza</h1>
+        <h2>(777) 777-7777</h2>
         <nav id="header-nav">
-            <button class="nav-button" onclick="location.href='index.html'">Home</button>
-            <button class="nav-button" onclick="location.href='reviews.html'">Reviews</button>
-            <button class="nav-button" onclick="location.href='contact.html'">Contact</button>
+            <button class="nav-button" id="home-btn" onclick="location.href='index.html'">Home</button>
+            <button class="nav-button" id="reviews-btn" onclick="location.href='reviews.html'">Reviews</button>
+            <button class="nav-button" id="contact-btn" onclick="location.href='contact.html'">Contact</button>
         </nav>
+    </header>
+    <header id="mobile-phone-nbr">
+        <h1>(777) 777-7777</h1>
     </header>
     <main>
         <article>
@@ -39,7 +40,7 @@
             <p>We are a pizza place</p>
         </article>
     </main>
-    <footer class="main-footer">
+    <footer id="main-footer">
         <span id="logo-lower">
             <img src="Media/Okotoks Pizza.png" alt="Okotoks Pizza Logo" />
         </span>
